<resources>
    <string name="app_name">ProjektIO</string>
    <string name="RESTapiURL">https://projio.azurewebsites.net/</string>
    <string name="inventoryUIDashboardNewButton">Nowa</string>
    <string name="inventoryUIDashboardResumeButton">Wznów</string>
    <string name="inventoryUINewInventoryFloors">Piętra</string>
    <string name="inventoryUINewInventoryStart">Rozpocznij</string>
    <string name="inventoryUINewInventoryCancel">Anuluj</string>
    <string name="inventoryUIInventoryFinishInventory">Zakończ</string>
    <string name="inventoryUIInventoryPauseInventory">Przerwij</string>
    <string name="inventoryUIInventoryScan">Skanuj</string>
    <string name="logInActivityLoginHintLabel">Login</string>
    <string name="logInActivityPasswordHintLabel">Hasło</string>
    <string name="logInActivityButton">Zaloguj</string>
    <string name="logInActivityDefaultMessageLabel">Podaj login i hasło:</string>
    <string name="logInActivityLoginFailedMessageLabel">Nieprawidłowy login lub hasło!\n Spróbuj jeszcze raz:</string>
    <string name="logInActivityLoginSuccessfulMessageLabel">Zalogowano</string>
    <string name="logInActivityLoginErrorMessageLabel">Wystąpił błąd podczas logowania</string>
    <string name="managerUIDashboardDatabaseButton">Baza środków</string>
    <string name="managerUIDashboardReportsButton">Raporty</string>
    <string name="managerUIViewDatabaseAddItemButton">+</string>
    <string name="managerUIViewDatabaseSearchOptionsButton">Pomieszczenia</string>
    <string name="managerUISearchOptionsBackButton">Zamknij</string>
    <string name="managerUISearchOptionsBuildingsTextView">Budynki</string>
    <string name="managerUISearchOptionsFloorsTextView">Piętra</string>
    <string name="managerUISearchOptionsRoomsTextView">Pomieszczenia</string>
    <string name="managerUIAddBuildingName">Nazwa budynku</string>
    <string name="managerUIAddBuildingAddButton">Dodaj</string>
    <string name="managerUIAddBuildingCancelButton">Anuluj</string>
    <string name="managerUIAddFloorName">Nazwa piętra</string>
    <string name="managerUIAddFloorAddButton">Dodaj</string>
    <string name="managerUIAddFloorCancelButton">Anuluj</string>
    <string name="managerUIAddRoomName">Nazwa pomieszczenia</string>
    <string name="managerUIAddRoomAddButton">Dodaj</string>
    <string name="managerUIAddRoomCancelButton">Anuluj</string>
    <string name="managerUIEditBuildingName">Zmień nazwę budynku</string>
    <string name="managerUIEditBuildingEditButton">Zmień</string>
    <string name="managerUIEditBuildingCancelButton">Anuluj</string>
    <string name="managerUIEditFloorName">Zmień nazwę piętra</string>
    <string name="managerUIEditFloorEditButton">Zmień</string>
    <string name="managerUIEditFloorCancelButton">Anuluj</string>
    <string name="managerUIEditRoomName">Zmień nazwę pomieszczenia</string>
    <string name="managerUIEditRoomEditButton">Zmień</string>
    <string name="managerUIEditRoomCancelButton">Anuluj</string>
    <string name="managerUIDeleteMsg">Jesteś pewien, że chcesz usunąć: </string>
    <string name="managerUIDeleteWarning">Zawarte przedmioty zostaną usunięte.</string>
    <string name="managerUIDeleteDeleteButton">Usuń</string>
    <string name="managerUIDeleteCancelButton">Anuluj</string>
    <string name="managerUIAddItemText">Dodaj środek trwały w wybranym pomieszczeniu:</string>
    <string name="managerUIAddItemScanButton">Skanuj kod</string>
    <string name="managerUIAddItemCancelButton">Anuluj</string>
    <string name="managerUIEditItemMoveItemText">Przenieś:</string>
    <string name="managerUIEditItemEditItemText">Edytuj:</string>
    <string name="managerUIEditItemDeleteItemButton">Usuń przedmiot</string>
    <string name="managerUIEditItemMoveItemBuildingText">Budynek</string>
    <string name="managerUIEditItemMoveItemFloorText">Piętro</string>
    <string name="managerUIEditItemMoveItemRoomText">Pomieszczenie</string>
    <string name="managerUIEditItemDeleteItemText">Jesteś pewien, że chcesz usunąć ten przedmiot? </string>
    <string name="managerUIEditItemBackButton">Zamknij</string>
    <string name="managerUIItemParamsStatus">Wpisz status…</string>
    <string name="managerUIItemParamsCode">Wpisz lub zeskanuj kod…</string>
    <string name="managerUIItemParamsCategory">Wpisz kategorię…</string>
    <string name="managerUIItemParamsName">Wpisz nazwę…</string>
    <string name="managerUIViewReportsGetReportsButton">Pobierz raporty</string>
    <string name="toastBuildingExists">Istnieje już budynek o tej nazwie</string>
    <string name="toastFloorExists">Istnieje już piętro o tej nazwie</string>
    <string name="toastRoomExists">Istnieje już pomieszczenie o tej nazwie</string>
    <string name="toastElementNotChosen">Nie wybrano elementu</string>
    <string name="toastRoomNotChosen">Nie wybrano pomieszczenia</string>
    <string name="toastEmptyField">Upewnij się, że żadne pole nie jest puste</string>
    <string name="toastDownloadError">Błąd podczas pobierania</string>
    <string name="toastScanFailed">Nie zeskanowano kodu</string>
    <string name="toastNoSuchItem">Nie ma takiego przedmiotu</string>
    <string name="TODO">Nie zaimplementowano</string>
    <string name="title_activity_inventory">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>