<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_filter"
    android:paddingBottom="@dimen/dialogTopBottomMargin">

    <EditText
        android:id="@+id/editTextAddRoomFragment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialogEditTextHeight"
        android:layout_marginStart="@dimen/dialogMarginAndPadding"
        android:layout_marginTop="@dimen/dialogTopBottomMargin"
        android:layout_marginEnd="@dimen/dialogMarginAndPadding"
        android:background="@drawable/app_edit_text"
        android:drawableStart="@drawable/ic_room_icon"
        android:drawablePadding="@dimen/loginActivityEditTextPadding"
        android:ems="10"
        android:hint="@string/managerUIAddRoomName"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/dialogTextPadding"
        android:paddingEnd="@dimen/dialogTextPadding"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddRoomFragment">

        <Button
             android:id="@+id/buttonAddAddRoomFragment"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".5"
             android:text="@string/managerUIAddRoomAddButton"
             android:textAllCaps="false"
             android:layout_marginTop="@dimen/dialogMarginAndPadding"
             android:layout_marginStart="@dimen/dialogMarginAndPadding"
             android:layout_marginEnd="@dimen/dialogMarginAndPadding"
             android:background="@drawable/dialog_button"
             android:textSize="15sp"
             android:textColor="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/buttonCancelAddRoomFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/managerUIAddRoomCancelButton"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/dialogMarginAndPadding"
            android:layout_marginStart="@dimen/dialogMarginAndPadding"
            android:layout_marginEnd="@dimen/dialogMarginAndPadding"
            android:background="@drawable/dialog_button"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>