<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_filter"
    android:paddingBottom="@dimen/dialogTopBottomMargin">

    <TextView
        android:id="@+id/textViewDeleteBuildingFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialogMarginAndPadding"
        android:layout_marginTop="@dimen/dialogTopBottomMargin"
        android:layout_marginEnd="@dimen/dialogMarginAndPadding"
        android:background="@drawable/dialog_textview"
        android:ems="10"
        android:text="@string/managerUIDeleteMsg"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/buttonTextColor"
        android:padding="@dimen/dialogDeletePadding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDeleteBuildingFragment">

        <Button
             android:id="@+id/buttonDeleteDeleteBuildingFragment"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".5"
             android:text="@string/managerUIDeleteDeleteButton"
             android:textAllCaps="false"
             android:layout_marginTop="@dimen/dialogMarginAndPadding"
             android:layout_marginStart="@dimen/dialogMarginAndPadding"
             android:layout_marginEnd="@dimen/dialogMarginAndPadding"
             android:background="@drawable/dialog_button"
             android:textSize="15sp"
             android:textColor="@color/colorPrimaryDark"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonCancelDeleteBuildingFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/managerUIDeleteCancelButton"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/dialogMarginAndPadding"
            android:layout_marginStart="@dimen/dialogMarginAndPadding"
            android:layout_marginEnd="@dimen/dialogMarginAndPadding"
            android:background="@drawable/dialog_button"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>